--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.7.0",
-    "next": "14.2.12",
+    "next": "^14.2.33",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
